fixed the sub heading spacing

--- a/starter-code/css/style.css
+++ b/starter-code/css/style.css
@@ -72,7 +72,7 @@ ul {
 h1,
 h2,
 h3 {
-  margin-bottom: 1rem;
+  margin: 1rem 0;
 }
 
 p {
